# image-server-py

./: .gitignore  Dockerfile  conftest.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: audit.py  main.py  models.py  transform.py  urlproc.py
app/compress/: __init__.py  jpeg.py  png.py  webp.py
tests/: test_compress.py  test_url_endpoints.py
tests/smoke/: test_smoke.py
